# langchain-deep-research-agent

./: DESIGN.md  README.md  langgraph.json  pyproject.toml
scripts/: setup.sh  start.sh  start_langsmith.sh
src/agent/: configuration.py  graph.py  nodes.py  prompts.py  schemas.py  state.py  tools.py
ui/: index.html  server.py
